--- a/baitap08-25/baitapcssbasic/baitapcssbasic4.html
+++ b/baitap08-25/baitapcssbasic/baitapcssbasic4.html
@@ -8,14 +8,15 @@
 <style>
     *{margin: 0;padding: 0;box-sizing: border-box;}
     header{text-align: center; margin-bottom: 10px;}
-    body{background-color: antiquewhite; margin: 20px 700px;}
-    section{background-color: white;padding: 10px 0px 10px 10px;}
+    body{background-color: rgb(211, 207, 202); padding: 20px 600px;}
+    section{background-color: rgb(231, 229, 229);padding: 10px 0px 10px 10px;}
     .form-name input{width: 100%; padding-top: 10px;margin: 10px 0px;border-style: hidden;}
     .form-submit{margin-top: 10px;}
-    .form-submit input{width: 80px;height: 30px;background-color: rgb(129, 125, 125);color: white;}
+    .form-submit input{width: 80px;height: 30px;background-color: rgb(29, 28, 28);color: white;}
     .form-email input{width: 100%; padding-top: 10px;margin: 10px 0px;border-style: hidden;}
     .form-phone input{width: 100%; padding-top: 10px;margin: 10px 0px;border-style: hidden;}
     .form-cv input{margin: 5px 0px;}
+    .form-messenger textarea{width: 90%;}
 </style>
 <body>
     <header>
