--- a/baitap08-25/baitapcssbasic/baitapcssbasic5.html
+++ b/baitap08-25/baitapcssbasic/baitapcssbasic5.html
@@ -7,9 +7,9 @@
 </head>
 <style>
     *{margin: 0;padding: 0;box-sizing: border-box;}
-    body{background-color: azure; max-width: 100%; padding: 0px 600px;}
+    body{background-color: azure;}
     header{text-align: center;}
-    .form{margin: 10px;background-color: bisque;padding: 10px 0px 10px 10px; background-color: beige;}
+    .form{margin: 10px;background-color: bisque;padding: 10px 0px 10px 10px; background-color: beige; width: 500px;margin: 0px auto;}
     .form--name input{background-color: azure;width: 100%;border-style: hidden;}
     .form--email input{background-color: azure;width: 100%;border-style: hidden;}
     .form--password input{background-color: azure;width: 100%;border-style: hidden;}
