--- a/baitap08-25/baitapcssbasic/baitapcssbasic4.html
+++ b/baitap08-25/baitapcssbasic/baitapcssbasic4.html
@@ -8,8 +8,8 @@
 <style>
     *{margin: 0;padding: 0;box-sizing: border-box;}
     header{text-align: center; margin-bottom: 10px;}
-    body{background-color: rgb(211, 207, 202); padding: 20px 600px;}
-    section{background-color: rgb(231, 229, 229);padding: 10px 0px 10px 10px;}
+    body{background-color: rgb(211, 207, 202);}
+    .cv{background-color: rgb(231, 229, 229);padding: 10px 0px 10px 10px;width: 700px;margin: 0px auto;}
     .form-name input{width: 100%; padding-top: 10px;margin: 10px 0px;border-style: hidden;}
     .form-submit{margin-top: 10px;}
     .form-submit input{width: 80px;height: 30px;background-color: rgb(29, 28, 28);color: white;}
@@ -22,7 +22,7 @@
     <header>
         <H1>Tuyển Dụng</H1>
     </header>
-    <section class="CV">
+    <section class="cv">
         <form action="tuyendung.com" method="post">
             <div class="text">
                 <div class="form-name">
