--- a/baitap08-25/baitonghop/baitonghop4.html
+++ b/baitap08-25/baitonghop/baitonghop4.html
@@ -1,29 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <style>
-    *{margin: 0;padding: 0;box-sizing: border-box;}
-    body{margin: 20px 100px;}
-    nav li{display: inline;}
-    a{text-decoration: none;}
-    ul{list-style-type: none;}
-    
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
+    body {
+        margin: 20px 100px;
+    }
+
+    nav li {
+        display: inline;
+    }
+
+    a {
+        text-decoration: none;
+    }
+
+    ul {
+        list-style-type: none;
+    }
 </style>
+
 <body>
     <header>
         <nav>
             <ul>
                 <li><a href="#"><span class="material-symbols-outlined">
-                    arrow_back_ios
-                    </span></a></li>
-                    <li><a href="#">Home</a></li>
-                    <li>|</li>
-                    <li><a href="#">my rewards</a></li>
+                            arrow_back_ios
+                        </span></a></li>
+                <li><a href="#">Home</a></li>
+                <li>|</li>
+                <li><a href="#">my rewards</a></li>
             </ul>
         </nav>
     </header>
@@ -34,7 +52,8 @@
                 <li><a href="#">Sumary</a></li>
                 <li><a href="#">About TripGuide Rewards</a></li>
             </ul>
-            <hr class="hr1"><hr class="hr2">
+            <hr class="hr1">
+            <hr class="hr2">
         </div>
         <div class="main">
             <div class="main-1">
@@ -54,4 +73,5 @@
         </div>
     </section>
 </body>
+
 </html>
