--- a/baitap08-25/baitapcssbasic/baitapcssbasic1.html
+++ b/baitap08-25/baitapcssbasic/baitapcssbasic1.html
@@ -8,7 +8,8 @@
 </head>
 <style>
     body {
-        text-align: center;padding: 50px;
+        text-align: center;
+        padding: 50px;
     }
 
     span {
@@ -18,8 +19,19 @@
     div {
         padding: 10px;
     }
-    #head{background-color: rgb(116, 116, 241);color: white;padding: 10px 30px;}
-    div>a{background-color: rgb(78, 74, 74);color: white;padding: 10px 30px;margin: 10px;}
+
+    #head {
+        background-color: rgb(116, 116, 241);
+        color: white;
+        padding: 10px 30px;
+    }
+
+    div>a {
+        background-color: rgb(78, 74, 74);
+        color: white;
+        padding: 10px 30px;
+        margin: 10px;
+    }
 </style>
 
 <body>
