--- a/baitap08-25/baitapcssbasic/baitapcssbasic4.html
+++ b/baitap08-25/baitapcssbasic/baitapcssbasic4.html
@@ -1,23 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tuyen Dung</title>
 </head>
 <style>
-    *{margin: 0;padding: 0;box-sizing: border-box;}
-    header{text-align: center; margin-bottom: 10px;}
-    body{background-color: rgb(211, 207, 202);}
-    .cv{background-color: rgb(231, 229, 229);padding: 10px 0px 10px 10px;width: 700px;margin: 0px auto;}
-    .form-name input{width: 100%; padding-top: 10px;margin: 10px 0px;border-style: hidden;}
-    .form-submit{margin-top: 10px;}
-    .form-submit input{width: 80px;height: 30px;background-color: rgb(29, 28, 28);color: white;}
-    .form-email input{width: 100%; padding-top: 10px;margin: 10px 0px;border-style: hidden;}
-    .form-phone input{width: 100%; padding-top: 10px;margin: 10px 0px;border-style: hidden;}
-    .form-cv input{margin: 5px 0px;}
-    .form-messenger textarea{width: 90%;}
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
+    header {
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    body {
+        background-color: rgb(211, 207, 202);
+    }
+
+    .cv {
+        background-color: rgb(231, 229, 229);
+        padding: 10px 0px 10px 10px;
+        width: 700px;
+        margin: 0px auto;
+    }
+
+    .form-name input {
+        width: 100%;
+        padding-top: 10px;
+        margin: 10px 0px;
+        border-style: hidden;
+    }
+
+    .form-submit {
+        margin-top: 10px;
+    }
+
+    .form-submit input {
+        width: 80px;
+        height: 30px;
+        background-color: rgb(29, 28, 28);
+        color: white;
+    }
+
+    .form-email input {
+        width: 100%;
+        padding-top: 10px;
+        margin: 10px 0px;
+        border-style: hidden;
+    }
+
+    .form-phone input {
+        width: 100%;
+        padding-top: 10px;
+        margin: 10px 0px;
+        border-style: hidden;
+    }
+
+    .form-cv input {
+        margin: 5px 0px;
+    }
+
+    .form-messenger textarea {
+        width: 90%;
+    }
 </style>
+
 <body>
     <header>
         <H1>Tuyển Dụng</H1>
@@ -52,4 +104,5 @@
         </form>
     </section>
 </body>
+
 </html>
