--- a/baitap08-25/baitonghop/baitonghop1.html
+++ b/baitap08-25/baitonghop/baitonghop1.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baitonghop1</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <style>
     * {
@@ -15,7 +16,7 @@
     }
 
     body {
-        margin:10px;
+        margin: 10px;
     }
 
     header {
@@ -41,17 +42,39 @@
         color: gray;
     }
 
-    section{display: flex;justify-content: center;
+    section {
+        display: flex;
+        justify-content: center;
     }
 
     input {
-        width: 400px; margin-top: 10px; ;
+        width: 400px;
+        margin-top: 10px;
+        ;
     }
-    .text{margin: 0px auto;}
-    section h3{text-align: center;}
-    .search input{width:70px;height: 30px;background-color: black;color: gray;}
-    .guests select{width: 380px;}
-    footer{margin: 50px 10px;}
+
+    .text {
+        margin: 0px auto;
+    }
+
+    section h3 {
+        text-align: center;
+    }
+
+    .search input {
+        width: 70px;
+        height: 30px;
+        background-color: black;
+        color: gray;
+    }
+
+    .guests select {
+        width: 380px;
+    }
+
+    footer {
+        margin: 50px 10px;
+    }
 </style>
 
 <body>
@@ -83,7 +106,7 @@
                 </div>
                 <div class="guests">
                     <label for="guests">Guests:</label><br>
-                    <select name="guests" id="guests" >
+                    <select name="guests" id="guests">
                         <option value="1">1</option>
                     </select>
                 </div>
@@ -96,9 +119,10 @@
     </section>
     <footer>
         <div><span class="material-symbols-outlined">
-            copyright
+                copyright
             </span> 2023 Hotel Search, All right reserved.
         </div>
     </footer>
 </body>
+
 </html>
