--- a/23-09-20-SS14/baithem2/index.html
+++ b/23-09-20-SS14/baithem2/index.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="container__feedback">
-                <div class="container__feedback__main">
+                <!-- <div class="container__feedback__main">
                     <div class="container__feedback__main__point"></div>
                     <div class="container__feedback__main__review"></div>
                 </div>
@@ -39,7 +39,7 @@
                     <span class="material-symbols-outlined close">
                         close
                     </span>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
